fix contrast color

--- a/css/style.css
+++ b/css/style.css
@@ -39,7 +39,7 @@ h1,
     font-size: 0.9em;
     margin-top: 5px;;
     padding-bottom: 30px;
-    color: #FFFF00;
+    color: #FFFF3D;
 }
 
 .list-lessons {
